--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Contact List</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+</nav>
 <body>
     <header>
         <hr>
