--- a/index.html
+++ b/index.html
@@ -6,11 +6,6 @@
     <title>Contact List</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
-</nav>
 <body>
     <header>
         <hr>
@@ -40,7 +35,19 @@
         </form>
         <section id="contacts">
             <h2>Contact List</h2>
-            <div id="contactList"></div>
+            <table id="contactList">
+                <thead>
+                    <tr>
+                        <th>First Name</th>
+                        <th>Last Name</th>
+                        <th>Email</th>
+                        <th>Phone Number</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody id="contactTableBody">
+                </tbody>
+            </table>
         </section>
     </main>
     <footer>
